Sorting menu done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="section-header">Каталог</h1>
                     <div class="dropdown">
                         <button class="dropdown-button">По убыванию рейтинга</button>
-                        <div class="dropdown-content">
+                        <div class="dropdown-menu">
                             <a href="#">По убыванию рейтинга</a>
                             <a href="#">По возрастанию рейтинга</a>
                             <a href="#">По убыванию денег</a>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    
+
                 </div>
             </div>
         </main>
