Small fix with apply filter button's classes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </label>
                         
                     </section>
-                    <button id="apply-filters-button" class="button main-buttons">Применить</button>
+                    <button id="apply-filters-button" class="main-buttons">Применить</button>
                 </div>
             </aside>
 
