Order page implemented

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <div class="header-logo">
                 <img class="header-logo-img" src="img/logo.png">
-                <span class="header-logo-text">Товары 24</span>
+                <span class="header-logo-text">Magazin.Ru</span>
             </div>
             
             <div class="header-search">
@@ -28,9 +28,8 @@
         </header>
 
 
-        <div id="#" class="alert hidden">
-            <span class="alert-text"></span>
-            <button class="alert-close"><img class="alert-close-img" src="#"></button>
+        <div class="alert-container">
+
         </div>
 
 
@@ -98,7 +97,7 @@
 
 
         <footer>
-            <p class="footer-text">© 2025 Товары 24</p>
+            <p class="footer-text">© 2025 Magazin.Ru</p>
         </footer>
     </div>
 
