--- a/order.html
+++ b/order.html
@@ -14,7 +14,7 @@
         <header class="header">
             <div class="header-logo">
                 <img class="header-logo-img" src="img/logo.png">
-                <span class="header-logo-text">Товары 24</span>
+                <span class="header-logo-text">Magazin.Ru</span>
             </div>
             
             <div class="header-redirects">
@@ -23,10 +23,9 @@
             </div>
         </header>
 
+        
+        <div class="alert-container">
 
-        <div id="#" class="alert hidden">
-            <span class="alert-text"></span>
-            <button class="alert-close"><img class="alert-close-img" src="#"></button>
         </div>
 
 
@@ -43,7 +42,7 @@
                     <h1 class="section-header">Оформление заказа</h1>
                 </div>
                 <form id="order" class="input-section" method="post" action="https://httpbin.org/post">
-                    <div id="order-form-part" class="input-form form-part-wrapper">
+                    <div id="form-part-1" class="input-form form-part-wrapper">
                         <div class="field-container">
                             <label class="input-form-label" for="name">Имя</label>
                             <input id="name" class="input-form-item" type="text" name="full_name" placeholder="Иванов Иван" required>
@@ -66,7 +65,7 @@
                         </div>
                     </div>
 
-                    <div class="input-form form-part-wrapper">
+                    <div id="form-part-2" class="input-form form-part-wrapper">
                         <div class="field-container">
                             <label class="input-form-label" for="address">Адрес доставки</label>
                             <input id="address" class="input-form-item" name="delivery_address" type="text" placeholder="ул. Пушкина, 43" required>
@@ -75,19 +74,20 @@
                             <label class="input-form-label" for="delivery-date">Дата доставки</label>
                             <input type="date" id="delivery-date" class="input-form-item" name="delivery_date" required>
                         </div>
-                        <div class="field-container">
+                        <div id="last-filed-container" class="field-container">
                             <label class="input-form-label" for="delivery-interval">Временной интервал доставки</label>
                             <select type="time" id="delivery-interval" class="input-form-item" name="delivery_interval" placeholder="11.01.2025" required>
                                 <option value="">Выберите временной интервал</option>
                                 <option value="08:00-12:00">08:00-12:00</option>
-                                <option value="12:00:14:00">12:00-14:00</option>
+                                <option value="12:00-14:00">12:00-14:00</option>
                                 <option value="14:00-18:00">14:00-18:00</option>
                                 <option value="18:00-22:00">18:00-22:00</option>
                             </select>
                         </div>
+
                         <div class="form-buttons-container">
-                            <button type="reset" class="input-form-button main-buttons" form="order">Сбросить</button>
-                            <button type="submit" class="input-form-button main-buttons" form="order">Оформить</button>
+                            <button id="clear-form-button" type="reset" class="input-form-button main-buttons" form="order">Сбросить</button>
+                            <button id="send-form-button" type="submit" class="input-form-button main-buttons" form="order">Оформить</button>
                         </div>
                     </div>
                 </form>
@@ -96,7 +96,7 @@
 
 
         <footer>
-            <p class="footer-text">© 2025 Товары 24</p>
+            <p class="footer-text">© 2025 Magazin.Ru</p>
         </footer>
     </div>
 
