Implement loading orders and features delete and show order

--- a/order.html
+++ b/order.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/order.css">
     <link rel="stylesheet" href="style/style.css">
-    <title>Главная страница</title>
+    <title>Корзина</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         <main>
             <div class="order-page-wrapper">
                 <div class="catalog-header">
-                    <h1 class="section-header">Каталог</h1>
+                    <h1 class="section-header">Корзина</h1>
                 </div>
                 <div id="order-cards" class="card-container">
                     
